# ResolutionSystem

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
client/: main.py
client/user/: main.go  tui.go
client/user/state/: state_interface.go
proto/: common.proto
server/: main.py
server/GORPC/service/: UserIssueService.go
server/PyRPC/: __init__.py  serve.py
server/PyRPC/services/: Features_Server.py  IssueServer.py  SharedData.py
